cif/org.eclipse.escet.cif.tests/tests/explorer/requirements.run.err
WARNING: The CIF specification has features that may cause an unexpected resulting state space:

  ------------------------------------------------------------------
  (1/2) Automaton is a requirement, but will be explored as a plant.
  ------------------------------------------------------------------
   * In the top-level scope of the specification:
     - requirement automaton r1:
                             ^
     - requirement automaton r2:
                             ^

  ------------------------------------------------------------------
  (2/2) Invariant is a requirement, but will be explored as a plant.
  ------------------------------------------------------------------
   * In the top-level scope of the specification:
     - requirement invariant r1.x + r2.x >= 0;
                   ^
   * In automaton "r1":
     - requirement invariant x >= 0;
                   ^
     - requirement invariant x >= 0;
                   ^
   * In automaton "r2":
     - requirement invariant x >= 0;
                   ^
   * In location "r2.loc":
     - requirement invariant x >= 0;
                   ^
     - requirement invariant x <= 1 div x;
                   ^
ERROR: Failed to compute invariant "r2.x <= 1 div r2.x" in initial state.
CAUSE: Division by zero: 1 div 0.
